--- a/layout1/style.css
+++ b/layout1/style.css
@@ -1,9 +1,13 @@
 li{
     float: left;
 }
-ul{
-   background-color: cornflowerblue;
-}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  
+    background-color: #333;
+  }
 li a {
     display: block;
     color: white;
